--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="base:app_id" content="6991b646e0d5d2cf831b5cca" />
   <title>Tipsy - Send Tips on Base</title>
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="style.css">
